llvm/test/tools/llubi/assume_invalid_align.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %alloc = alloca i32
  call void @llvm.assume(i1 true) ["align"(ptr null, i128 18446744073709551617)]
  call void @llvm.assume(i1 true) ["align"(ptr %alloc, i128 18446744073709551616)]
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT:   call void @llvm.assume(i1 true) [ "align"(ptr null, i128 18446744073709551617) ]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @llvm.assume(i1 true) [ "align"(ptr %alloc, i128 18446744073709551616) ] at @main
; CHECK-NEXT: Immediate UB detected: The pointer ptr 0x8 [alloc] violates align(18446744073709551616) assumption.
; CHECK-NEXT: error: Execution of function 'main' failed.
